<resources>
    <string name="aim_prediction_title">Aim Prediction</string>
    <string name="app_name">SparkPUBG</string>
    <string name="backup_restore">Backup And Restore</string>
    <string name="backup_settings">Backup Settings</string>
    <string name="ban_warning">Only You will be responsible for the Ban</string>
    <string name="blinking">Blinking</string>
    <string name="body">Body</string>
    <string name="bold">Bold</string>
    <string name="chest">Chest</string>
    <string name="common_settings">Common Settings</string>
    <string name="copy">Copy</string>
    <string name="core">Core</string>
    <string name="cpv_custom">Custom</string>
    <string name="cpv_default_title">Select a Color</string>
    <string name="cpv_presets">Presets</string>
    <string name="cpv_select">Select</string>
    <string name="cpv_transparency">Transparency</string>
    <string name="crosshair">CrossHair</string>
    <string name="daemon_error">Daemon Connection Error</string>
    <string name="daemon_error_app">Daemon Connection Error, Please Restart The App!</string>
    <string name="disable">Disable</string>
    <string name="display_all_items">Display All Items</string>
    <string name="distance">Distance</string>
    <string name="downloading_data">Downloading Data</string>
    <string name="downloading_error">Error While Downloading Data, Try again!</string>
    <string name="edit_selected">EDIT SELECTED</string>
    <string name="enter_credentials">Please Enter Valid Username And Password</string>
    <string name="expand_button_title">Advanced</string>
    <string name="firing">Firing</string>
    <string name="firing_or_scoping">Scoping or Firing</string>
    <string name="head">Head</string>
    <string name="logging_in">Login …</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="memory_aimbot">Memory Aimbot(Very Risky!!)</string>
    <string name="memory_aimbot_settings">Memory Aimbot Settings</string>
    <string name="memory_hack_summary">Warning!! Very Risky, Might Get Ban</string>
    <string name="memory_hack_title">Memory Hacks</string>
    <string name="menu_aimbot">Aimbot</string>
    <string name="menu_coloring">Coloring</string>
    <string name="menu_esp">ESP</string>
    <string name="menu_items">Items</string>
    <string name="menu_memory">Memory</string>
    <string name="menu_settings">Settings</string>
    <string name="neck">Neck</string>
    <string name="none_selected">No Item Selected</string>
    <string name="normal">Normal</string>
    <string name="not_set">Not set</string>
    <string name="other">Other</string>
    <string name="other_settings">Other</string>
    <string name="password">Password</string>
    <string name="pip_error">Pip Error</string>
    <string name="player">Player</string>
    <string name="preference_copied">\"%1$s\" copied to clipboard.</string>
    <string name="prefs_aim_adjust_touch_key">pubg_aim_adjust_touch</string>
    <string name="prefs_aim_adjust_touch_summary">Please turn off the Adjust Touch Area option to use aimbot</string>
    <string name="prefs_aim_adjust_touch_title">Adjust Touch Area</string>
    <string name="prefs_aim_bullet_speed_key">pubg_aim_bullet_speed</string>
    <string name="prefs_aim_bullet_speed_summary">Adjust the bullet speed used for aim prediction (smaller value = greater prediction distance)</string>
    <string name="prefs_aim_bullet_speed_title">Bullet Speed</string>
    <string name="prefs_aim_delay_key">pubg_aim_delay</string>
    <string name="prefs_aim_delay_summary">Delay While Aiming towards Enemy</string>
    <string name="prefs_aim_delay_title">Aim Delay</string>
    <string name="prefs_aim_fov_color_key">pubg_aim_fov_color</string>
    <string name="prefs_aim_fov_color_title">Aim FOV Color</string>
    <string name="prefs_aim_fov_key">pubg_aim_fov</string>
    <string name="prefs_aim_fov_show_key">pubg_aim_fov_show</string>
    <string name="prefs_aim_fov_show_title">Show FOV Circle</string>
    <string name="prefs_aim_fov_summary">Aim only at enemies within the range</string>
    <string name="prefs_aim_fov_title">Aim FOV</string>
    <string name="prefs_aim_icon_lock_key">pubg_aim_icon_lock</string>
    <string name="prefs_aim_icon_lock_title">Lock Aimbot Icon</string>
    <string name="prefs_aim_ignore_bot_key">pubg_aim_ignore_bot</string>
    <string name="prefs_aim_ignore_bot_title">Ignore Bot</string>
    <string name="prefs_aim_ignore_knocked_key">pubg_aim_ignore_knocked</string>
    <string name="prefs_aim_ignore_knocked_title">Ignore Knocked</string>
    <string name="prefs_aim_input_inversion_key">pubg_aim_input_inversion</string>
    <string name="prefs_aim_input_inversion_summary">Some devices have touch screen installed upside down. Try enabling this option if touch aimbot is not working properly.</string>
    <string name="prefs_aim_input_inversion_title">Input Inversion</string>
    <string name="prefs_aim_locked_key">pubg_aim_locked</string>
    <string name="prefs_aim_locked_summary">When turned on, aimbot locks onto the target until turned off. Non-locking mode allows switching between targets</string>
    <string name="prefs_aim_locked_title">Aim Lock</string>
    <string name="prefs_aim_mode_key">pubg_aim_mode</string>
    <string name="prefs_aim_prediction_key">pubg_aim_prediction</string>
    <string name="prefs_aim_prediction_summary">"Based on the speed and direction of the enemy's movement"</string>
    <string name="prefs_aim_prediction_title">Predict Aim</string>
    <string name="prefs_aim_priority_key">pubg_aim_priority</string>
    <string name="prefs_aim_priority_title">Aim Priority</string>
    <string name="prefs_aim_recoil_comp_ads_key">pubg_aim_recoil_comp_ads</string>
    <string name="prefs_aim_recoil_comp_ads_title">With ADS/Scope</string>
    <string name="prefs_aim_recoil_comp_key">pubg_aim_recoil_comp</string>
    <string name="prefs_aim_recoil_comp_title">Without ADS/Scope</string>
    <string name="prefs_aim_smooth_key">pubg_aim_smooth</string>
    <string name="prefs_aim_smooth_summary">Makes aim path smoother</string>
    <string name="prefs_aim_smooth_title">Smooth Aim</string>
    <string name="prefs_aim_smoothness_key">pubg_aim_smoothness</string>
    <string name="prefs_aim_smoothness_summary">Too high value can slow down the aim speed and miss the target</string>
    <string name="prefs_aim_smoothness_title">Aim Smoothness</string>
    <string name="prefs_aim_speed_key">pubg_aim_speed</string>
    <string name="prefs_aim_speed_summary">Adjust Speed of Engaging Aim towards Enemy</string>
    <string name="prefs_aim_speed_title">Aim Speed</string>
    <string name="prefs_aim_status_key">pubg_aim_status</string>
    <string name="prefs_aim_status_title">Aim Status</string>
    <string name="prefs_bullet_track_key">pubg_bullet_track</string>
    <string name="prefs_bullet_track_title">Magic Bullet</string>
    <string name="prefs_sit_scope_key">pubg_sit_scope</string>
    <string name="prefs_sit_scope_title">Sit Scope</string>
    <string name="prefs_esp_alert360_key">pubg_esp_alert360</string>
    <string name="prefs_esp_alert360_title">360 Alert</string>
    <string name="prefs_esp_box_key">pubg_esp_box</string>
    <string name="prefs_esp_box_title">Box</string>
    <string name="prefs_esp_crosshair_key">pubg_esp_crosshair</string>
    <string name="prefs_esp_crosshair_title">Crosshair</string>
    <string name="prefs_esp_cutout_key">pubg_esp_cutout</string>
    <string name="prefs_esp_cutout_title">Cover Display Cutout Areas</string>
    <string name="prefs_esp_line_key">pubg_esp_line</string>
    <string name="prefs_esp_line_title">Line</string>
    <string name="prefs_esp_nearenemy_key">pubg_esp_nearenemy</string>
    <string name="prefs_esp_nearenemy_title">Near Enemies</string>
    <string name="prefs_esp_radar_key">pubg_esp_radar</string>
    <string name="prefs_esp_radar_title">Radar</string>
    <string name="prefs_esp_teammate_key">pubg_esp_teammate</string>
    <string name="prefs_esp_teammate_title">TeamMate</string>
    <string name="prefs_esp_throw_alert_key">pubg_esp_throw_alert</string>
    <string name="prefs_esp_throw_alert_title">Throwable Warning</string>
    <string name="prefs_hide_overlay_key">pubg_hide_overlay</string>
    <string name="prefs_hide_overlay_summary">Hide cheat and aimbot icons and esp overlay. To re-open menu, Click on last seen position of icon on screen</string>
    <string name="prefs_hide_overlay_title">Hide Overlay</string>
    <string name="prefs_less_recoil_key">pubg_less_recoil</string>
    <string name="prefs_less_recoil_title">Lobby Bypass</string>
    <string name="prefs_other_ignore_bot_key">pubg_other_ignore_bot</string>
    <string name="prefs_other_ignore_bot_title">Ignore Bot</string>
    <string name="prefs_other_ignore_knocked_key">pubg_other_ignore_knocked</string>
    <string name="prefs_other_ignore_knocked_title">Ignore Knocked</string>
    <string name="prefs_other_traceline_key">pubg_other_traceline</string>
    <string name="prefs_other_traceline_title">Trace Line</string>
    <string name="prefs_player_distance_key">pubg_player_distance</string>
    <string name="prefs_player_distance_title">Distance</string>
    <string name="prefs_player_health_key">pubg_player_health</string>
    <string name="prefs_player_health_title">Health</string>
    <string name="prefs_player_name_key">pubg_player_name</string>
    <string name="prefs_player_name_title">Name</string>
    <string name="prefs_player_skeleton_key">pubg_player_skeleton</string>
    <string name="prefs_player_skeleton_title">Skeleton</string>
    <string name="prefs_player_teamid_key">pubg_player_teamid</string>
    <string name="prefs_player_teamid_title">TeamID</string>
    <string name="prefs_player_weapon_key">pubg_player_weapon</string>
    <string name="prefs_player_weapon_title">Weapon</string>
    <string name="prefs_render_fps_key">pubg_render_fps</string>
    <string name="prefs_render_fps_title">Render FPS</string>
    <string name="prefs_throwable_distance_key">pubg_throwable_distance</string>
    <string name="prefs_throwable_distance_title">Max Throwable Render Distance</string>
    <string name="render_distance">Render Distance</string>
    <string name="settings">Settings</string>
    <string name="settings_backup_aimbot_key">backup_aimbot</string>
    <string name="settings_backup_aimbot_summary">Backup aimbot related settings</string>
    <string name="settings_backup_aimbot_title">Backup Aimbot Config</string>
    <string name="settings_backup_core_key">backup_core</string>
    <string name="settings_backup_core_summary">Backup esp, coloring and other settings</string>
    <string name="settings_backup_core_title">Backup Core Config</string>
    <string name="settings_backup_items_key">backup_items</string>
    <string name="settings_backup_items_summary">Backup custom items filter settings</string>
    <string name="settings_backup_items_title">Backup Items Config</string>
    <string name="settings_backup_key">backup</string>
    <string name="settings_backup_summary">Copy Current Settings in Clipboard</string>
    <string name="settings_backup_title">Backup</string>
    <string name="settings_memory_aimbot_key">pubg_memory_aimbot</string>
    <string name="settings_memory_aimbot_summary">"Don't touch it if you have no idea what you're doing"</string>
    <string name="settings_memory_aimbot_title">Enable Unsafe Memory Aimbot</string>
    <string name="settings_memory_hacks_key">pubg_memory_hacks</string>
    <string name="settings_memory_hacks_summary">"Don't touch it if you want to save your precious account"</string>
    <string name="settings_memory_hacks_title">Enable Unsafe Memory Hacks</string>
    <string name="settings_restore_key">restore</string>
    <string name="settings_restore_summary">Restore Settings from Clipboard</string>
    <string name="settings_restore_title">Restore</string>
</resources>