<?xml version="1.0" encoding="utf-8" ?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/darkgray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <com.sparkskillz.widgets.MenuCategory
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:title="@string/core" />

        <com.sparkskillz.widgets.MenuSwitch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:title="@string/prefs_esp_box_title"
            app:key="@string/prefs_esp_box_key" />

        <com.sparkskillz.widgets.MenuSwitch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:title="@string/prefs_esp_line_title"
            app:key="@string/prefs_esp_line_key" />

        <com.sparkskillz.widgets.MenuSwitch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:title="@string/prefs_esp_radar_title"
            app:key="@string/prefs_esp_radar_key" />

        <com.sparkskillz.widgets.MenuSwitch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:title="@string/prefs_esp_teammate_title"
            app:key="@string/prefs_esp_teammate_key" />

        <com.sparkskillz.widgets.MenuSwitch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:title="@string/prefs_esp_alert360_title"
            app:key="@string/prefs_esp_alert360_key" />

        <com.sparkskillz.widgets.MenuSwitch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:title="@string/prefs_esp_crosshair_title"
            app:key="@string/prefs_esp_crosshair_key" />

        <com.sparkskillz.widgets.MenuSwitch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:title="@string/prefs_esp_nearenemy_title"
            app:key="@string/prefs_esp_nearenemy_key" />

        <com.sparkskillz.widgets.MenuSwitch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:title="@string/prefs_esp_throw_alert_title"
            app:key="@string/prefs_esp_throw_alert_key" />

        <com.sparkskillz.widgets.MenuCategory
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:title="@string/player" />

        <com.sparkskillz.widgets.MenuSwitch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:title="@string/prefs_player_name_title"
            app:key="@string/prefs_player_name_key" />

        <com.sparkskillz.widgets.MenuSwitch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:title="@string/prefs_player_teamid_title"
            app:key="@string/prefs_player_teamid_key" />

        <com.sparkskillz.widgets.MenuSwitch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:title="@string/prefs_player_distance_title"
            app:key="@string/prefs_player_distance_key" />

        <com.sparkskillz.widgets.MenuSwitch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:title="@string/prefs_player_skeleton_title"
            app:key="@string/prefs_player_skeleton_key" />

        <com.sparkskillz.widgets.MenuSwitch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:title="@string/prefs_player_health_title"
            app:key="@string/prefs_player_health_key" />

        <com.sparkskillz.widgets.MenuSwitch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:title="@string/prefs_player_weapon_title"
            app:key="@string/prefs_player_weapon_key" />

        <com.sparkskillz.widgets.MenuCategory
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:title="@string/other" />

        <com.sparkskillz.widgets.MenuSwitch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:title="@string/prefs_other_traceline_title"
            app:key="@string/prefs_other_traceline_key" />

        <com.sparkskillz.widgets.MenuSwitch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:title="@string/prefs_other_ignore_bot_title"
            app:key="@string/prefs_other_ignore_bot_key"
            app:defaultValue="true" />

        <com.sparkskillz.widgets.MenuSwitch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:title="@string/prefs_other_ignore_knocked_title"
            app:key="@string/prefs_other_ignore_knocked_key"
            app:defaultValue="true" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
